--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
+  line-height: 1.5;
 }
 
 img {
@@ -82,25 +83,18 @@ main {
 }
 
 .project {
-  margin-bottom: 48px;
+  margin-bottom: 38px;
 }
 
-.project:nth-of-type(1) {
-  margin-top: 32px;
-}
-
+/* Loanding font just in case my first option does not load */
 h1,
 h2,
 h3 {
-  color: #222;
-}
-
-h1 {
-  font-size: 32px;
+  color: black;
 }
 
 h3 {
-  font-family: "Playfair Display", serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
 
